--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "illuminate/redis": "*",
         "inertiajs/inertia-laravel": "^1.0",
         "laravel/framework": "^11.0",
+        "laravel/reverb": "@beta",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "predis/predis": "^2.2",
+        "pusher/pusher-php-server": "^7.2",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
