--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
         "@types/react-dom": "^18.0.10",
         "@vitejs/plugin-react": "^4.2.0",
         "autoprefixer": "^10.4.12",
-        "axios": "^1.6.4",
+        "axios": "^1.6.8",
+        "laravel-echo": "^1.16.1",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
+        "pusher-js": "^8.4.0-rc2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
@@ -25,7 +27,9 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@react-leaflet/core": "^2.1.0",
         "leaflet": "^1.9.4",
+        "prop-types": "^15.8.1",
         "react-leaflet": "^4.2.1"
     }
 }
